<resources>
    <string name="orders">შეკვეთები</string>
    <string name="delivery">მიტანა</string>
    <string name="sale_at_the_client">ობიექტების რეალიზაცია</string>
    <string name="daily_sales">დღიური რეალიზაცია</string>
    <string name="ludsaxarshi">თბილისი</string>
    <string name="text_tarigi">თარიღი</string>
    <string name="shekvetis_damateba">შეკვეთის დამატება</string>
    <string name="_10litri">10 ლტ.</string>
    <string name="_20litri">20 ლტ.</string>
    <string name="_30litri">30 ლტ.</string>
    <string name="_50litri">50 ლტ.</string>
    <string name="minusi">-</string>
    <string name="pliusi">+</string>
    <string name="sxva_ludis_damateba">ლუდის სახეობის დამატება</string>
    <string name="dadastureba">შეყვანა</string>
    <string name="wamogebuli_kasrebi">წამოღებული კასრები</string>
    <string name="gadaxdili_tanxa">გადახდილი თანხა</string>
    <string name="default_0">0</string>
    <string name="barrel_sale_title">გაყიდვები (კასრი)</string>
    <string name="bottle_sale_title">გაყიდვები (ბოთლი)</string>
    <string name="add_object">ობიექტის დამატება</string>
    <string name="add_user">მომხმარებლის დამატება</string>
    <string name="add_beer">ლუდის დამატება</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="logout">Log Out</string>
    <string name="need_logout">საჭიროებს გადატვირთვას</string>
    <string name="dasaxeleba">დასახელება</string>
    <string name="username">მომხმარებელი</string>
    <string name="password">პაროლი</string>
    <string name="login">შესვლა</string>
    <string name="beer_prices_title">ლუდის ფასები კონკრეტული ობიექტისთვის</string>
    <string name="bottle_prices_title">ბოთლის ფასები</string>
    <string name="call">call</string>
    <string name="m_edit">რედაქტირება</string>
    <string name="sak_piri">საკონტაქტო პირი</string>
    <string name="sk">ს/კ</string>
    <string name="info">ინფო</string>
    <string name="remove">სიიდან ამოღება</string>
    <string name="comment">კომენტარი</string>
    <string name="ludis_shetana">ლუდის შეტანა</string>
    <string name="distributorebi">დისტრიბუტორები</string>
    <string name="saxeli_gvari">სახელი გვარი</string>
    <string name="adress">მისამართი</string>
    <string name="tel">ტელ:</string>
    <string name="location">მდებარეობა</string>
    <string name="location_title">მდებარეობა:</string>
    <string name="admin_rights">ადმინსტრატორი</string>
    <string name="manager_rights">მენეჯერი</string>
    <string name="confirm">გაიმეორეთ პაროლი</string>
    <string name="title_users_list">მომხმარებლები</string>
    <string name="change_pass">პაროლის შეცვლა</string>
    <string name="change_pass_done">პაროლი შეიცვალა!</string>
    <string name="group">დაჯგუფება</string>
    <string name="choose_distributor">ვის დაევალოს:</string>
    <string name="choose_distributor_region">რომელ რეგიონს:</string>
    <string name="delete">წაშლა</string>
    <string name="saorient_fasi">საორენტიაციო ფასი</string>
    <string name="uaryofa">უარყოფა</string>
    <string name="lari">₾</string>
    <string name="format_gel">%.2f ₾</string>
    <string name="format_count">%s ც.</string>
    <string name="mitanili_kasrebi">მიტანილი კასრები</string>
    <string name="shekveta_title">შეკვეთა  30 / 50</string>
    <string name="beer">ლუდი</string>
    <string name="obieqti">ობიექტი</string>
    <string name="ssysclear">სისტ. გაწმენდა</string>
    <string name="reports">რეპორტი</string>
    <string name="damimaxsovre">დამიმახსოვრე</string>
    <string name="text_record">ჩაწერა</string>
    <string name="sys_clean">სისტემის გაწმენდა</string>
    <string name="past_days">დღები</string>
    <string name="chanaweris_damateba">ჩანაწერის დამატება</string>
    <string name="drois_archeva">თარიღის შეცვლა</string>
    <string name="zveli_paroli">ძველი პაროლი</string>
    <string name="axali_paroli">ახალი პაროლი</string>
    <string name="back">უკან</string>
    <string name="forward">წინ</string>
    <string name="gift">საჩუქარი</string>
    <string name="replace">შეცვლა</string>
    <string name="store_house">საწყობი</string>
    <string name="savse">სავსე კასრები</string>
    <string name="nashti">ნაშთი *</string>
    <string name="nashti_at_client">ნაშთი</string>
    <string name="chamotana">ჩამოტანა</string>
    <string name="carieli">ცარიელი კასრები</string>
    <string name="wageba">წაღება</string>
    <string name="detaluri">დეტალური</string>
    <string name="ufleba_false">არაგაქვთ ამ ოპერაციის განხორციელების უფლება</string>
    <string name="kasri_inout">რეალიზებული\nდაბრუნებული</string>
    <string name="realized">რეალიზ.</string>
    <string name="received">დაბრუნება</string>
    <string name="_30_n30">30\n30</string>
    <string name="ganmarteba1">* (+ x ) ობიექტებზე დატოვებული კასრები</string>
    <string name="choose_color">ფერის არჩევა</string>
    <string name="patern_datetime">yyyy-MM-dd HH:mm</string>
    <string name="patern_date">yyyy-MM-dd</string>
    <string name="patern_date2">yyyy:MM:dd</string>
    <string name="davalianeba">დავალიანება</string>
    <string name="kasri">კასრი</string>
    <string name="bottle">ბოთლი</string>
    <string name="bottles">ბოთლები</string>
    <string name="finances">ფინანსები</string>
    <string name="barrels">კასრები</string>
    <string name="pay">გადახდა</string>
    <string name="payment_type">გადახდის ტიპი</string>
    <string name="price">ღირებულება:</string>
    <string name="taken_by_cash">ნაღდი:</string>
    <string name="taken_by_transfer">ჩარიცვა:</string>
    <string name="msg_noUserFile">can\'t find users file</string>
    <string name="msg_cantDelUserFile">can\'t delete users file</string>
    <string name="msg_enterKasrQuantity">შეავსეთ კასრების რაოდენობა</string>
    <string name="msg_orderAlreadyExist">ამ ობიექტზე უკვე არსებობს შეკვეთა! გთხოვთ განაახლოთ არსებული შეკვეთა</string>
    <string name="beerColor">ფერი</string>
    <string name="list">სია</string>
    <string name="logo">ლოგო</string>
    <string name="litri">ლიტრი</string>
    <string name="fields_request2">ორივე ველი აუცილებელია</string>
    <string name="feel_empty_fields">შეავსეთ ცარიელი ველები!</string>
    <string name="no_val_to_save">შეიყვანეთ მონაცემები</string>
    <string name="already_in_list">ეს ლუდის სახეობა ამ კასრთან უკვე დამატებულია სიაში!</string>
    <string name="bottle_already_in_list">ეს ბოთლი უკვე დამატებულია სიაში!</string>
    <string name="no_edit_access">არაგაქვთ რედაქტირების უფლება!</string>
    <string name="xarjebi"><u>ხარჯები</u>:</string>
    <string name="expense_title">ხარჯები</string>
    <string name="xelze_tanxa">ხელზე თანხა:</string>
    <string name="odenoba">ოდენობა</string>
    <string name="add_expense">ხარჯის დამატება</string>
    <string name="edit_expense">ხარჯის რედაქტირება</string>
    <string name="delete_expense">ხარჯის წაშლა</string>
    <string name="comments">კომენტარები</string>
    <string name="notif_text">სანახავად დააჭირეთ</string>
    <string name="notif_title">ახალი კომენტარი</string>
    <string name="loading_title">იტვირთება!</string>
    <string name="loading_text">დაელოდეთ…</string>
    <string name="msg_empty_not_saved">ცარიელი მონაცემები არ ინახება</string>
    <string name="msg_invalid_format">არასწორი ფორმატი</string>
    <string name="msg_record_deleted">ჩანაწერი წაიშალა!</string>
    <string name="msg_record_not_deleted">ჩანაწერი ვერ წაიშალა!</string>
    <string name="msg_record_added">ჩანაწერი დამატებულია!</string>
    <string name="msg_record_not_added">ჩანაწერი ვერ დაემატა!</string>
    <string name="location_en">tbilisi</string>
    <string name="location_ge">თბილისი</string>
    <string name="msg_not_editable">კახეთის აპლიკაციაში დაფიქსირებულ მონაცემები თბილისიდან არ იცვლება</string>
    <string name="can_type">კასრის ზომა</string>
    <string name="can_count">კასრების რაოდენობა</string>
    <string name="beer_kind">ლუდის სახეობა</string>
    <string name="img_description">simple description</string>
    <string name="error_no_connection">შეამოწმეთ ინტერნეტ კავშირი!</string>
    <string name="order_date">შეკვეთის თარიღი:</string>
    <string name="client_debt">დავალიანება\n თანხა: %.2f ₾   _   კასრი: %d ც.</string>
    <string name="debt">დავალიანება</string>
    <string name="debt_receive_error_text">დავალიანების მონაცემების მიღება ვერ მოხერხდა</string>
    <string name="amount_is">თანხა: %.2f ₾</string>
    <string name="debt_amount_is">თანხა: %.2f (%.2f) ₾</string>
    <string name="active">აქტიური</string>
    <string name="not_active">არა აქტიური</string>
    <string name="completed">დასრულებული</string>
    <string name="canceled">გაუქმებული</string>
    <string name="cancel">გაუქმება</string>
    <string name="is_deleted">წაშლილია</string>
    <string name="deleted">წაშლილი</string>
    <string name="auto_created">ავტომატური</string>
    <string name="fill_data">შეავსეთ მონაცემები</string>
    <string name="confirm_delete_order">ნამდვილად გსურთ შეკვეთის წაშლა?</string>
    <string name="yes">დიახ</string>
    <string name="no">არა</string>
    <string name="status">სტატუსი:</string>
    <string name="cannot_edit">არააქტიური შეკვეთები არ რედაქტირდება!</string>
    <string name="order_main">შეკვეთები</string>
    <string name="add_order">შეკვეთის დამატება</string>
    <string name="edit_order">შეკვეთის რედაქტირება</string>
    <string name="remove_grouping">მოხსენით დაჯგუფება!</string>
    <string name="confirm_delete_text">ნამდვილად გსურთ ჩანაწერის წაშლა?</string>
    <string name="auth_fail_firebase">FireBase Auth Failed.</string>
    <string name="registration_fail_firebase">FireBase Registration Failed.</string>
    <string name="orders_sum_title">შეკვეთების ჯამი</string>
    <string name="server_error">სერვერის შეცდომა</string>
    <string name="some_error">მოხდა შეცდომა</string>
    <string name="ok">კარგი</string>
    <string name="data_saved">მონაცემები შენახულია</string>
    <string name="duplicate_client">ასეთი ობიექტი უკვე არსებობს ბაზაში!</string>
    <string name="choose_client">აირჩიეთ ობიექტი</string>
    <string name="create_client">ობიექტის დამატება</string>
    <string name="edit_client">ობიექტის რედაქტირება</string>
    <string name="mitana_no_order">შეკვეთის გარეშე მიტანა</string>
    <string name="channel_description">აქ მოდის შეტყობინებები</string>
    <string name="add_comment">კომენტარის დამატება</string>
    <string name="username_invalid_error_text">შეიყვანეთ მინიმუმ 3 სიმბოლო!</string>
    <string name="password_invalid_error_text">პაროლი უნდა შეიცავდეს მინიმუმ 6 სიმბოლოს!</string>
    <string name="password_confirm_error_text">დაადასტურეთ ახალი პაროლი!</string>
    <string name="enter_corect_data">შეავსეთ მოთხოვნილი ველები სათანადოდ!</string>
    <string name="cant_add_xarji">ძველი თარიღით ხარჯებს ვერ დაამატებთ!</string>
    <string name="something_is_wrong">დაფიქსირდა დაურკვველი შეცდომა!</string>
    <string name="lt">%d ლტ.</string>
    <string name="lt_f">%.2f ლტ.</string>
    <string name="need_cleaning">გას. %d დღე</string>
    <string name="no_permission_common">არ გაქვთ ამ ქმედების განხორცილების უფლება</string>
    <string name="operator">ოპერატორი:</string>
    <string name="switch_title">Switch</string>
    <string name="order_history_title">შეკვეთის ისტორია</string>
    <string name="client_field">ობიექტი: %s</string>
    <string name="date_field">თარიღი: %s</string>
    <string name="order_status_field">სტატუსი: %s</string>
    <string name="order_distr_field">დისტრიბუტორი: %s</string>
    <string name="sale_history_title">რეალიზაციის ისტორია</string>
    <string name="history">ისტორია</string>
    <string name="common_save">შენახვა</string>
    <string name="search_title">ძებნა</string>
    <string name="only_notable_items">მხოლოდ საყურადღებო</string>
    <string name="volume">მოცულობა</string>
    <string name="options">ქმედება</string>
    <string name="by_name">დალაგება სახელით</string>
    <string name="by_idle">დალაგება საყურადღ.</string>
</resources>