<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/addObjectFragment"
            android:checked="false"
            android:icon="@drawable/beer_icon"
            android:title="@string/add_object" />

        <item
            android:id="@+id/addUserFragment"
            android:checked="false"
            android:icon="@drawable/beer_icon"
            android:title="@string/add_user" />

        <item
            android:id="@+id/userListFragment"
            android:checked="false"
            android:icon="@drawable/beer_icon"
            android:title="@string/userslist" />

        <item
            android:id="@+id/addBeerFragment"
            android:icon="@drawable/beer_icon"
            android:title="@string/add_beer" />

        <item
            android:id="@+id/sawyobiFragment"
            android:icon="@drawable/beer_icon"
            android:title="@string/sawyobi"/>

        <item
            android:id="@+id/sysClearFragment"
            android:icon="@drawable/beer_icon"
            android:title="@string/ssysclear"/>

        <item
            android:id="@+id/mChangePass"
            android:icon="@drawable/beer_icon"
            android:title="@string/change_pass"/>

        <item
            android:id="@+id/loginFragment"
            android:icon="@drawable/beer_icon"
            android:title="@string/logout" />

    </group>
</menu>