<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search_title"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/only_notable_items"
        android:checkable="true"
        android:checked="false"
        android:title="@string/only_notable_items"
        app:showAsAction="never" />

    <group
        android:id="@+id/item_sort"
        android:menuCategory="alternative"
        android:checkableBehavior="single"
        android:enabled="true">

        <item
            android:id="@+id/sort_by_name"
            android:checked="true"
            android:title="@string/by_name"
            app:showAsAction="never" />

        <item
            android:id="@+id/sort_by_idle"
            android:checked="false"
            android:title="@string/by_idle"
            app:showAsAction="never" />

    </group>
</menu>