<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/orderSearch"
        android:icon="@drawable/ic_search"
        android:title="@string/search_title"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/menuGoBarrelOrders"
        android:icon="@drawable/barrel_white_24"
        android:title="@string/barrels"
        app:showAsAction="ifRoom"
        tools:targetApi="26" />

    <item
        android:id="@+id/appBarOrderSwitch"
        android:title="@string/switch_title"
        app:actionLayout="@layout/switch_item"
        app:showAsAction="always" />
</menu>