<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bkg_underline"
    android:paddingHorizontal="@dimen/gr_size_4"
    android:paddingVertical="@dimen/gr_size_8">

    <TextView
        android:id="@+id/sysClearItemName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_weight="7"
        android:text="@string/dasaxeleba" />

    <TextView
        android:id="@+id/sysClearItemDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:text="@string/text_tarigi" />

    <TextView
        android:id="@+id/sysClearItemDays"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:paddingStart="@dimen/gr_size_0"
        android:paddingEnd="@dimen/gr_size_4"
        android:text="@string/past_days"
        android:textAlignment="textEnd" />

</LinearLayout>