<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/gr_size_8">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mtavruli_bold"
        android:gravity="center"
        android:padding="@dimen/gr_size_8"
        android:text="@string/options"
        android:textSize="@dimen/sp22" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="?attr/strokeColor" />

    <TextView
        android:id="@+id/optionHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/gr_size_8"
        android:padding="@dimen/gr_size_8"
        android:text="@string/history"
        android:textColor="?attr/mainTextColor"
        android:textSize="@dimen/sp22"
        app:drawableStartCompat="@drawable/ic_history_24" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="?attr/strokeColor" />

    <TextView
        android:id="@+id/optionEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/gr_size_8"
        android:padding="@dimen/gr_size_8"
        android:text="@string/m_edit"
        android:textColor="?attr/mainTextColor"
        android:textSize="@dimen/sp22"
        app:drawableStartCompat="@drawable/ic_edit_white_24dp"
        app:drawableTint="?attr/mainTextColor" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="?attr/strokeColor" />

    <TextView
        android:id="@+id/optionDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/gr_size_8"
        android:paddingVertical="@dimen/gr_size_8"
        android:text="@string/delete"
        android:textColor="?attr/colorWarning"
        android:textSize="@dimen/sp22"
        app:drawableStartCompat="@drawable/ic_delete_white"
        app:drawableTint="?attr/colorWarning" />

</LinearLayout>