<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragPages.addBeer.AddBeerFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/t_addedit_beer"
            android:text="@string/sxva_ludis_damateba"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="@dimen/textSize_4"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="51dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/e_beer_name"
            app:layout_constraintTop_toBottomOf="@+id/btn_beer_uaryofa"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:errorEnabled="true"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="0dp">
            <EditText
                android:hint="@string/dasaxeleba"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/dasaxeleba"
                android:inputType="text"
                tools:ignore="UnusedAttribute" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_beer_uaryofa"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="invisible"
            android:text="@string/uaryofa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_beer_done"
            android:text="@string/pliusi"
            app:layout_constraintTop_toBottomOf="@+id/e_beer_name"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="296dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/e_beer_pr"
            app:layout_constraintTop_toBottomOf="@+id/e_beer_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_color"
            android:layout_marginEnd="6dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="0dp">
            <EditText
                android:hint="@string/saorient_fasi"
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="Autofill" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"

            android:background="@drawable/ic_order_circle"
            android:contentDescription="@string/beerColor"
            app:layout_constraintBottom_toBottomOf="@+id/btn_beer_done"
            app:layout_constraintEnd_toStartOf="@id/btn_beer_done"
            app:layout_constraintTop_toBottomOf="@+id/e_beer_name" />

        <ListView
            android:id="@+id/listview_beer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/e_beer_pr"
            tools:layout_editor_absoluteX="0dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>