<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragPages.sysClear.SysClearFragment">

    <LinearLayout
        android:id="@+id/sysClearListTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/gray_light"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/gr_size_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="7"
            android:text="@string/dasaxeleba" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/text_tarigi" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/past_days" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/sysClearRecycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sysClearListTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>